# medblock

backend/: Cargo.toml
backend/src/: block.rs  blockchain.rs  main.rs  mod.rs  routes.rs
frontend/: App.js  package-lock.json  package.json
frontend/android/: settings.gradle
frontend/android/app/src/main/java/com/frontend/: MainApplication.java
frontend/ios/: Podfile
frontend/ios/frontend/: Info.plist
frontend/ios/frontend.xcodeproj/: project.pbxproj
frontend/ios/frontendTests/: Info.plist
frontend/mock/: explore.js
