[package]
name = "backend"
version = "0.1.0"
authors = ["Lazaro Hurtado <hurtadolazaro12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
chrono = "0.4"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"]}
